added help stuff, remove printing password l o l

--- a/public/views/help.html
+++ b/public/views/help.html
@@ -16,7 +16,7 @@ if (localStorage.getItem("token")) {
 
 <body>
   <div class="help-body">
-    <img style="float: left; margin-left: 10px; margin-top: 10px" onclick="window.location.href = '/'" src="assets/back.png">
+    <div style="float: left; position: fixed; font-size: 20px; cursor: pointer;" onclick="window.location.href = '/'"><img style="margin-left: 10px; margin-top: 10px;" src="assets/back.png"></div>
     <div class="help-box" id="help-box">
       <div class="help-title">Lensflare</div>
       <div style="float:left; width: 65%; padding-top: 35px"><img width="100%" src="assets/Splash.jpg"></div>
@@ -29,7 +29,7 @@ if (localStorage.getItem("token")) {
         <!-- <img width="100%" src="assets/Splash.jpg"> -->
         <div style="font-size: 25px;">
           Start by creating a Lensflare account, if you don't already have one. Once it's made, add a new space by clicking "add new space" in the sidebar and then create your first device by clicking "manage my devices" and then "new device" -
-          select the space you just made to associate your HoloLens with that space.
+          select the space you just made to associate your HoloLens with that space and save the device. Leave the QR code up so you can scan it next.
         </div>
       </div>
       <div style="float:left; text-align: left; width: 35%">
@@ -37,17 +37,47 @@ if (localStorage.getItem("token")) {
         <div style="font-size: 25px;"></div>
       </div>
 
-      <div style="float:right; text-align: right; width: 35%">
+      <div style="float:right; text-align: right; width: 40%">
         <div style="font-size: 75px; text-decoration: italic; padding-top:85px"><i>Switch to the HoloLens</i></div><br /><br />
         <div style="font-size: 25px;"></div>
       </div>
 
-      <div style="float:left; text-align:left; width: 65%; padding-top: 85px">
+      <div style="float:left; text-align:left; width: 60%; padding-top: 85px">
         <!-- <img width="100%" src="assets/Splash.jpg"> -->
         <div style="font-size: 25px;">
-          Once your account is up and running, 
+          Once your account is up and running, put on your HoloLens and open the Lensflare app. It should automatically recognize that your HoloLens is not paired with an account. Once it enters scanning mode, make sure you
+          have a clear view of the QR code displayed on lensflare.space and say "Scan." Once paired, the device is connected to the space you just made!
         </div>
       </div>
+
+      <div style="float:left; text-align: left; width: 45%">
+        <div style="font-size: 75px; text-decoration: italic; padding-top:85px"><i>Create your first scene</i></div><br /><br />
+        <div style="font-size: 25px;"></div>
+      </div>
+
+      <div style="float:right; text-align:right; width: 55%; padding-top: 50px;">
+        <!-- <img width="100%" src="assets/Splash.jpg"> -->
+        <div style="font-size: 25px;">
+          After you've paired your device, you're ready to make a scene. Say "Create Scene" to enter the scene setup mode; a mesh will appear around you and you can click points of interest to drop gems.
+          Once you're done dropping pins, say "Done" and the HoloLens will begin uploading the spatial mapping and locations of each gem. Hang tight - your HoloLens will automatically transition to the viewing
+          scene when it's done uploading.
+        </div>
+      </div>
+
+      <div style="float:right; text-align: right; width: 45%; padding-top: 50px">
+        <div style="font-size: 75px; text-decoration: italic; padding-top:85px"><i>Edit your space</i></div><br /><br />
+        <div style="font-size: 25px;"></div>
+      </div>
+
+      <div style="float:left; text-align:left; width: 55%; padding-top: 80px; padding-bottom: 100px">
+        <!-- <img width="100%" src="assets/Splash.jpg"> -->
+        <div style="font-size: 25px;">
+          The final step is the most important: once the scene is uploaded, you can edit it directly on your Lensflare account page. Login to your account and select the space you just set up. Go through each item and
+          add a title, text, and/or media item as you need to. As you edit the items, they will be loaded live to your HoloLens so you can see how it looks!
+        </div>
+      </div>
+
+
       <!-- <img src="assets/Splash.jpg"> -->
       <!-- <a href="/" style="font-size:11px; text-decoration:none; color:white;">back to login</a> -->
     </div>
