--- a/public/views/database.html
+++ b/public/views/database.html
@@ -26,9 +26,12 @@
 
   <div id="db-messages" class="db-messages"></div>
   <div id="sidebar" class="sidebar">
-    <div class="spaces-title">Lensflare</div>
+    <div class="spaces-title">Lensflare<img style="padding: 5px; padding-right: 10px; float: right" onclick="window.location.href = '/help'" src="assets/question.png"></div>
     <div id="space-links"></div>
+    <div id="new-space"></div>
+
     <!-- <br /><br /> -->
+    <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick='addSpace()'>add new space</a></div>
     <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div>
     <br />
     <!-- <div style='font-size:12px; text-align:center'><a style='cursor: pointer;' onclick="addItemTest()">load mock data</a></div> -->
