add icons & styling - content of help

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -36,8 +36,8 @@
 
 .help-box {
   padding-top: 25px;
-  margin-left: 15%;
-  margin-right: 15%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .db-content {
