--- a/public/style/style.css
+++ b/public/style/style.css
@@ -88,7 +88,7 @@
 .db-name-save-button {
   background: inherit;
   font-weight: 300;
-  color: white;
+  color: #3B3C59;
   font-size: 15px;
   padding-bottom: 5px;
   border: none;
