styling - spacing on sidebar

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -29,7 +29,7 @@
     <div class="spaces-title">Lensflare<img style="padding: 5px; padding-right: 10px; float: right" onclick="window.location.href = '/help'" src="assets/question.png"></div>
 
     <div id="welcome"></div>
-    <div style='font-size:12px; text-align:left'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div><br />
+    <div style='font-size:12px; text-align:left'><a style='cursor: pointer;' onclick='manageDevices()'>manage my devices</a></div><br /><br />
     <div id="space-links"></div>
     <div id="new-space"></div>
 
