--- a/public/style/style.css
+++ b/public/style/style.css
@@ -82,7 +82,7 @@
   color: #3B3C59;
   font-size: inherit;
   padding-bottom: 5px;
-  width: 140px;
+  width: 135px;
 }
 
 .db-name-save-button {
@@ -256,7 +256,8 @@
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   position: absolute;
-  right: 22px;
+  right: 25px;
+  cursor: pointer;
   padding-left: 10px;
 }
 
