--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,5 +1,5 @@
 .title {
-  font-weight: 300;
+  font-weight: 600;
   color: white;
   font-size: 40px;
 }
@@ -12,7 +12,7 @@
 }
 
 .spaces-title {
-  font-weight: 300;
+  font-weight: bolder;
   color: white;
   font-size: 35px;
   padding-top: 15px;
@@ -39,20 +39,21 @@
 }
 
 .db-content {
+  font-weight: 200;
   padding-top: 15px;
-  padding-left: 205px;
-  padding-right: 10px;
+  padding-left: 145px;
+  padding-right: 45px;
 }
 
 .db-title {
-  font-weight: 300;
+  font-weight: 900;
   font-size: 25px;
   padding-bottom: 10px;
-  padding-left: 205px;
-  text-align: center;
+  text-align: left;
   height: 65px;
-  color: #3B3C59;
-  padding-top: 10px;
+  color: black;
+  padding: 45px;
+  padding-left: 145px;
   height: 40px;
 }
 
@@ -75,7 +76,7 @@
 
 .db-name-entry {
   font-weight: 300;
-  color: #3B3C59;
+  color: black;
   font-size: inherit;
   padding-bottom: 5px;
   width: 135px;
@@ -84,28 +85,68 @@
 .db-name-save-button {
   background: inherit;
   font-weight: 300;
-  color: #3B3C59;
+  color: black;
   font-size: 15px;
   padding-bottom: 5px;
-  border: none;
   cursor: pointer;
 }
 
-.sidebar {
-  background-color: #3B3C59;
+.topbar-color {
+  background: #8c9eff;
+  background: -webkit-linear-gradient(135deg, #4952FF, #88B7FF, #FDF6C0, #FFFFFF);
+  background: -o-linear-gradient(135deg, #4952FF, #88B7FF, #FDF6C0, #FFFFFF);
+  background: -moz-linear-gradient(135deg, #4952FF, #88B7FF, #FDF6C0, #FFFFFF);
+  background: linear-gradient(135deg, #4952FF, #88B7FF, #FDF6C0, #FFFFFF);
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 15px;
+  z-index: 1;
+}
 
-  background: -webkit-linear-gradient(135deg, #036564, #3B3C59);
-  background: -o-linear-gradient(135deg, #036564, #3B3C59);
-  background: -moz-linear-gradient(135deg, #036564, #3B3C59);
-  background: linear-gradient(135deg, #036564, #3B3C59);
+.space-blocks {
+  height: 250px;
+  width: 350px;
+  text-align: center;
+  background: #8c9eff;
+}
+
+.space-link {
+  font-size: 50px;
+  top: 150px;
+  color: white;
+  cursor: pointer;
+}
+
+.topbar {
+  font-family: 'Helvetica Neue';
+  padding-left: 15px;
+  padding-top: 20px;
+  background-color: white;
+  width: 100%;
+  height: 99px;
+  font-size: 75px;
+  color: black;
+  border-bottom: 1px solid black;
+  position: relative;
+  z-index: 10;
+  margin-top: 0px;
+}
+
+.sidebar {
+  background-color: white;
   position: fixed;
-  width: 200px;
+  width: 100px;
   height: 100%;
   top: 0px;
   padding-left: 5px;
   line-height: 200%;
   left: 0px;
-  color: white;
+  color: black;
+  border-right: 1px solid black;
+  padding-top: 120px;
+  z-index: 0;
 }
 
 .db-table th {
@@ -116,17 +157,17 @@
 .db-table td {
   vertical-align: top;
   padding: 7px;
-  border: 1px solid #3B3C59;
+  border: 1px solid black;
 }
 
 .db-table {
   width: 100%;
-  border: 1px solid #3B3C59;
+  border: 1px solid black;
   border-collapse: collapse;
 }
 
 .edit-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   width: 50px;
   font-size: 12px;
   background-color: inherit;
@@ -137,7 +178,7 @@
 }
 
 .upload-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 12px;
   background-color: inherit;
   border: none;
@@ -146,7 +187,7 @@
 }
 
 .qr-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 12px;
   background-color: inherit;
   border: none;
@@ -181,7 +222,7 @@
 }
 
 .qr-close-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 12px;
   background-color: inherit;
   border: none;
@@ -193,7 +234,7 @@
 .logout {
   background-color: inherit;
   border: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   cursor: pointer;
   color: white;
   font-size: 14px;
@@ -202,9 +243,9 @@
 .footer-box {
   position: fixed;
   bottom: 0;
-  width: 203px;
-  /*background-color: #3B3C59;*/
-  color: white;
+  width: 103px;
+  /*background-color: black;*/
+  color: black;
   text-align: center;
   left: 0;
   font-size: 16px;
@@ -214,7 +255,7 @@
 
 .text-box {
   width: 100%;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   width: 100%;
   font-size: inherit;
   white-space: pre-wrap;
@@ -224,7 +265,7 @@
 }
 
 .input-text {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   width: 100%;
   font-size: inherit;
   white-space: pre-wrap;
@@ -237,17 +278,18 @@
   background-color: inherit;
   border: none;
   color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 18px;
   position: absolute;
-  right: 0px;
+  /*top: 0px;*/
+  float: right;
 }
 
 .save-space-button {
   background-color: inherit;
   border: none;
   color: white;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 18px;
   position: absolute;
   right: 25px;
@@ -262,7 +304,7 @@
 .test-button {
   background-color: inherit;
   border: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 13px;
   color: white;
   text-align: center;
@@ -273,7 +315,7 @@
 }
 
 .login-button {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   width: 100px;
   font-size: 12px;
   background-color: transparent;
@@ -284,7 +326,7 @@
 }
 
 .login-button:hover {
-  color: #3B3C59;
+  color: black;
   background-color: white;
 }
 
@@ -303,7 +345,7 @@
 }
 
 #device-space-entry {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: inherit;
   border: 1px solid #dbe1ff;
   border-radius: 4px;
@@ -311,7 +353,7 @@
 }
 
 #device-name-entry {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: inherit;
   border: 1px solid #dbe1ff;
   border-radius: 4px;
@@ -319,17 +361,18 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
-  margin-right:0px;
+  font-family: 'Helvetica Neue', sans-serif;
+  margin: 0px;
 }
 
 .splash-body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   margin-right:0px;
-  background: -webkit-linear-gradient(135deg, #036564, #3B3C59);
-  background: -o-linear-gradient(135deg, #036564, #3B3C59);
-  background: -moz-linear-gradient(135deg, #036564, #3B3C59);
-  background: linear-gradient(135deg, #036564, #3B3C59);
+  background: #8c9eff;
+  background: -webkit-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
+  background: -o-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
+  background: -moz-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
+  background: linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -339,12 +382,12 @@ body {
 }
 
 .help-body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   margin-right:0px;
-  background: -webkit-linear-gradient(135deg, #036564, #3B3C59);
-  background: -o-linear-gradient(135deg, #036564, #3B3C59);
-  background: -moz-linear-gradient(135deg, #036564, #3B3C59);
-  background: linear-gradient(135deg, #036564, #3B3C59);
+  background: -webkit-linear-gradient(135deg, #036564, black);
+  background: -o-linear-gradient(135deg, #036564, black);
+  background: -moz-linear-gradient(135deg, #036564, black);
+  background: linear-gradient(135deg, #036564, black);
   width: 100%;
   position: absolute;
   top: 0;
