--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,7 @@
 .title {
   font-weight: 600;
-  color: white;
-  font-size: 40px;
+  color: black;
+  font-size: 95px;
 }
 
 .help-title {
@@ -26,10 +26,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 205px;
-  width: 300px;
-  margin-top: -105px;
-  margin-left: -160px;
+  height: 400px;
+  width: 500px;
+  margin-top: -200px;
+  margin-left: -250px;
   line-height: 150%;
 }
 
@@ -273,7 +273,7 @@
   border: none;
   font-family: 'Helvetica Neue', sans-serif;
   cursor: pointer;
-  color: white;
+  color: black;
   font-size: 14px;
 }
 
@@ -291,9 +291,8 @@
 }
 
 .text-box {
-  width: 100%;
+  width: 75%;
   font-family: 'Helvetica Neue', sans-serif;
-  width: 100%;
   font-size: inherit;
   white-space: pre-wrap;
   border: 1px solid #979797;
@@ -323,7 +322,7 @@
 .save-space-button {
   background-color: inherit;
   border: none;
-  color: white;
+  color: black;
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 18px;
   position: absolute;
@@ -354,8 +353,8 @@
   width: 100px;
   font-size: 12px;
   background-color: transparent;
-  color: white;
-  border: 1px solid white;
+  color: black;
+  border: 1px solid black;
   border-radius: 5px;
   padding: 3px;
 }
@@ -403,17 +402,17 @@ body {
 .splash-body {
   font-family: 'Helvetica Neue', sans-serif;
   margin-right:0px;
-  background: #8c9eff;
-  background: -webkit-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
+  background: white;
+  /*background: -webkit-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
   background: -o-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
   background: -moz-linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
-  background: linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);
+  background: linear-gradient(135deg, #8c9eff, #f9cbc6, #faf6e7);*/
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  color: white;
+  color: black;
 }
 
 .help-body {
@@ -427,7 +426,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  color: white;
+  color: black;
 }
 
 button:focus {
