--- a/public/views/database.html
+++ b/public/views/database.html
@@ -6,11 +6,13 @@
     <script src="scripts/libraries/three.min.js"></script>
     <script src="scripts/libraries/qrcode.js"></script>
     <script src="scripts/libraries/jquery.min.js"></script>
+    <script src="scripts/libraries/sweetalert.min.js"></script>
 
   <script src="scripts/actions.js"></script>
   <script src="scripts/database.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
+  <link href="scripts/libraries/sweetalert.css" rel="stylesheet">
 
   <title>Lensflare</title>
 
