--- a/public/style/style.css
+++ b/public/style/style.css
@@ -55,6 +55,7 @@
   padding: 45px;
   padding-left: 145px;
   height: 40px;
+  padding-top: 140px;
 }
 
 .db-messages {
@@ -152,11 +153,11 @@
   padding-top: 20px;
   background-color: white;
   width: 100%;
-  height: 99px;
-  font-size: 75px;
+  height: 90px;
+  font-size: 65px;
   color: black;
   border-bottom: 1px solid #979797;
-  position: relative;
+  position: fixed;
   z-index: 10;
   margin-top: 0px;
 }
