--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,6 +2,7 @@
   font-weight: 600;
   color: black;
   font-size: 95px;
+  text-align: left;
 }
 
 .help-title {
@@ -27,9 +28,9 @@
   top: 50%;
   left: 50%;
   height: 400px;
-  width: 500px;
-  margin-top: -200px;
-  margin-left: -250px;
+  width: 425px;
+  margin-top: -250px;
+  margin-left: -212px;
   line-height: 150%;
 }
 
@@ -291,14 +292,54 @@
   padding-top: 3px;
 }
 
-.text-box {
-  width: 75%;
+.form {
+  text-align: left;
   font-family: 'Helvetica Neue', sans-serif;
-  font-size: inherit;
-  white-space: pre-wrap;
+  font-weight: bold;
+  font-size: 25px;
+  width: 425px;
+
+  line-height: 150%;
+}
+
+
+
+.text-box {
+  width: 425px;
+  height: 50px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  /*white-space: pre-wrap;*/
   border: 1px solid #979797;
-  border-radius: 4px;
-  padding: 2px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  background-color: transparent;
+}
+
+.login-button {
+  font-family: 'Helvetica Neue', sans-serif;
+  width: 444px;
+  height: 50px;
+  font-size: 25px;
+  font-weight: bolder;
+
+  /*background: #8c9eff;*/
+  /*background: -webkit-linear-gradient(135deg, #4952FF, #88B7FF);
+  background: -o-linear-gradient(135deg, #4952FF, #88B7FF);
+  background: -moz-linear-gradient(135deg, #4952FF, #88B7FF);
+  background: linear-gradient(135deg, #4952FF, #88B7FF);*/
+  background: transparent;
+  color: black;
+  border: 1px solid #979797;
+  /*border-radius: 5px;*/
+  padding: 5px;
+}
+
+.login-button:hover {
+  color: #8c9eff;
+  border: 1px solid #8c9eff;
 }
 
 .input-text {
@@ -349,21 +390,6 @@
   cursor: pointer;
 }
 
-.login-button {
-  font-family: 'Helvetica Neue', sans-serif;
-  width: 100px;
-  font-size: 12px;
-  background-color: transparent;
-  color: black;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 3px;
-}
-
-.login-button:hover {
-  color: black;
-  background-color: white;
-}
 
 .edit-button:hover {
   text-decoration: underline;
