--- a/public/style/style.css
+++ b/public/style/style.css
@@ -338,8 +338,8 @@
 }
 
 .login-button:hover {
-  color: #8c9eff;
-  border: 1px solid #8c9eff;
+  color: #4952ff;
+  border: 1px solid #4952ff;
 }
 
 .input-text {
