redesign signup page:

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,10 +26,10 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
       <div class="title">Lensflare</div><br />
       <div class='form'>
         <div style='text-align: left; padding-top: 7px'>Annotate your world</div>
-        <br/>
+        <br/><br />
         <input class="text-box" id="email" placeholder="email" type="text"></input><br/>
         <br/>
-        <input class="text-box" id="password" placeholder="password" type="password"></input>
+        <input class="text-box" autocomplete="off" id="password" placeholder="password" type="password"></input>
         <br/>
         <div id="message" style="color:red; font-size:12px">
         <br /><br />
