styling, fix autofill stupid yellow

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -36,7 +36,7 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
         <button type="submit" class="login-button" onclick="signIn()">LOG IN</button><br />
 
         <div style='text-align:center'>
-          <a href="signup" style="font-size:11px; text-decoration:none; color:black;">create an account</a>
+          <a href="signup" style="font-size:15px; padding-left: 15px; text-decoration:none; color:black;">create an account</a>
         </div>
       </div>
       <br/>
