--- a/public/style/style.css
+++ b/public/style/style.css
@@ -34,6 +34,10 @@
   line-height: 150%;
 }
 
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 .help-box {
   padding-top: 25px;
   padding-left: 10%;
@@ -122,7 +126,7 @@
   text-align: left;
   display: inline-block;
   margin-right: 35px;
-  margin-bottom: 35px;
+  margin-bottom: 65px;
   font-size: 22px;
   /*border: 1px solid black;*/
 }
