--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -20,7 +20,7 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
 
     <div id='particle-js'></div>
     <div class="topbar-color" style='height: 25px'></div>
-    <div class="login-box" style='margin-top: -325px' id="login-box">
+    <div class="login-box" style='margin-top: -350px' id="login-box">
       <div class="title">Lensflare</div><br />
       <div class='form'>
         <div style='text-align: left; padding-top: 7px'>Create new account</div>
@@ -38,7 +38,7 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
         <button class="login-button" onclick="signUp()" type="submit">SUBMIT</button>
 
         <div style='text-align:center'>
-          <a href="/" style="font-size:11px; text-decoration:none; color:black;">back to login</a>
+          <a href="/" style="font-size:15px; padding-left: 15px; text-decoration:none; color:black;">back to login</a>
         </div>
         <div id="errors" style="color:red; font-size:12px;"></div>
         <div id="success" style="color:green; font-size:12px;"></div>
