styling to fit smaller screens & create account pg

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,7 +33,7 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
         <br/>
         <div id="message" style="color:red; font-size:12px">
         <br /><br />
-        <button type="submit" class="login-button" onclick="signIn()">LOG IN</button><br />
+        <button type="submit" class="login-button" onclick="signIn()">Log In</button><br />
 
         <div style='text-align:center'>
           <a href="signup" style="font-size:15px; padding-left: 15px; text-decoration:none; color:black;">create an account</a>
