--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -21,9 +21,9 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
     <div id='particle-js'></div>
     <div class="topbar-color" style='height: 25px'></div>
     <div class="login-box" style='margin-top: -350px' id="login-box">
-      <div class="title">Lensflare</div><br />
+      <div class="title"></div>
       <div class='form'>
-        <div style='text-align: left; padding-top: 7px'>Create new account</div>
+        <div style='text-align: left; font-size: 40px; padding-top: 7px'>Create new account</div>
         <br/><br />
         <input class="text-box" placeholder="name" name="name" id="name" type="text"></input><br/>
         <br/>
@@ -35,7 +35,7 @@ particlesJS.load('particle-js', 'scripts/libraries/particles.json', function () 
         <br/>
         <div id="message" style="color:red; font-size:12px">
         <br /><br />
-        <button class="login-button" onclick="signUp()" type="submit">SUBMIT</button>
+        <button class="login-button" onclick="signUp()" type="submit">Submit</button>
 
         <div style='text-align:center'>
           <a href="/" style="font-size:15px; padding-left: 15px; text-decoration:none; color:black;">back to login</a>
