add help button

--- a/public/views/database.html
+++ b/public/views/database.html
@@ -34,6 +34,7 @@
     <!-- <div id="welcome"></div> -->
     <div style='font-size:14px; text-align:center'><a style='cursor: pointer;' onclick='displaySpaces()'><img style="padding-top: 40px;" src='assets/spaces.png'><br />Spaces</a></div><br />
     <div style='font-size:14px; text-align:center'><a style='cursor: pointer;' onclick='manageDevicesLoad()'><img style="padding-top: 20px;" src='assets/devices.png'><br />Devices</a></div><br />
+    <div style='font-size:14px; text-align:center'><a style='cursor: pointer;' onclick='loadHelp()'><img style="padding-top: 20px;" src='assets/devices.png'><br />Help</a></div><br />
     <div style='font-size:14px; text-align:center'><a style='cursor: pointer;' onclick='logout()'><img style="padding-top: 20px;" src='assets/logout.png'><br />Logout</a></div><br /><br />
     <div id="space-links"></div>
     <div id="new-space"></div>
