prevent using quote marks in space name or device name

--- a/public/views/help.html
+++ b/public/views/help.html
@@ -1,80 +1,80 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="utf-8">
-    <link href="style/style.css" rel="stylesheet" type="text/css">
-    <script src="scripts/actions.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,900" rel="stylesheet">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <meta charset='utf-8'>
+    <link href='style/style.css' rel='stylesheet' type='text/css'>
+    <script src='scripts/actions.js'></script>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300,900' rel='stylesheet'>
+    <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
 </head>
 
 <body>
-  <div class="help-body">
-    <div style="float: left; position: fixed; font-size: 20px; cursor: pointer;" onclick="window.location.href = '/'"><img style="margin-left: 10px; margin-top: 10px;" src="assets/back.png"></div>
-    <div class="help-box" id="help-box">
-      <div class="help-title">Lensflare</div>
+  <div class='help-body'>
+    <div style='float: left; position: fixed; font-size: 20px; cursor: pointer;' onclick='window.location.href = '/''><img style='margin-left: 10px; margin-top: 10px;' src='assets/back.png'></div>
+    <div class='help-box' id='help-box'>
+      <div class='help-title'>Lensflare</div>
 
 
-      <div style="width: 100%">
-        <div style="float:left; width: 55%; padding-top: 35px"><img width="100%" src="assets/Splash.jpg"></div>
-        <div style="float:right; text-align: right; width: 40%">
-          <div style="font-size: 75px; text-decoration: italic; padding-top:85px"><i>Annotate your world</i></div><br /><br />
-          <div style="font-size: 25px;">Lensflare is a HoloLens application built to provide curation solutions for every need, from car dealerships to art museums to your own home. Set up is designed to be simple and straight forward: follow the directions below to get started.</div>
+      <div style='width: 100%'>
+        <div style='float:left; width: 55%; padding-top: 35px'><img width='100%' src='assets/Splash.jpg'></div>
+        <div style='float:right; text-align: right; width: 40%'>
+          <div style='font-size: 75px; text-decoration: italic; padding-top:85px'><i>Annotate your world</i></div><br /><br />
+          <div style='font-size: 25px;'>Lensflare is a HoloLens application built to provide curation solutions for every need, from car dealerships to art museums to your own home. Set up is designed to be simple and straight forward: follow the directions below to get started.</div>
         </div>
       </div>
 
 
-      <div style="width: 100%; height: 200px;">
-        <div style="float:right; text-align:right; width: 65%; padding-top: 150px">
-          <!-- <img width="100%" src="assets/Splash.jpg"> -->
-          <div style="font-size: 25px;">
-            Start by creating a Lensflare account. Once it's made, add a new space by clicking "add new space" in the sidebar and then create your first device by navigating to "manage my devices" and clicking "new device" -
+      <div style='width: 100%; height: 200px;'>
+        <div style='float:right; text-align:right; width: 65%; padding-top: 150px'>
+          <!-- <img width='100%' src='assets/Splash.jpg'> -->
+          <div style='font-size: 25px;'>
+            Start by creating a Lensflare account. Once it's made, add a new space by clicking 'add new space' in the sidebar and then create your first device by navigating to 'manage my devices' and clicking 'new device' -
             select the space you just made, add a name, and save the device.
           </div>
         </div>
-        <div style="float:left; text-align: left; width: 35%">
-          <div style="font-size: 75px; text-decoration: italic; padding-top:135px"><i>Set up your account</i></div><br /><br />
-          <div style="font-size: 25px;"></div>
+        <div style='float:left; text-align: left; width: 35%'>
+          <div style='font-size: 75px; text-decoration: italic; padding-top:135px'><i>Set up your account</i></div><br /><br />
+          <div style='font-size: 25px;'></div>
         </div>
       </div>
 
-      <div style="width: 100%; height: 200px;">
-        <div style="float:right; text-align: right; width: 40%">
-          <div style="font-size: 75px; text-decoration: italic; padding-top:135px"><i>Switch to the HoloLens</i></div><br /><br />
-          <div style="font-size: 25px;"></div>
+      <div style='width: 100%; height: 200px;'>
+        <div style='float:right; text-align: right; width: 40%'>
+          <div style='font-size: 75px; text-decoration: italic; padding-top:135px'><i>Switch to the HoloLens</i></div><br /><br />
+          <div style='font-size: 25px;'></div>
         </div>
 
-        <div style="float:left; text-align:left; width: 60%; padding-top: 115px">
-          <!-- <img width="100%" src="assets/Splash.jpg"> -->
-          <div style="font-size: 25px;">
-            Put on your HoloLens and open the Lensflare app. Once it enters scanning mode, display the QR code on your devices page and say "Scan" - once paired, the device is connected to the space you just made!
+        <div style='float:left; text-align:left; width: 60%; padding-top: 115px'>
+          <!-- <img width='100%' src='assets/Splash.jpg'> -->
+          <div style='font-size: 25px;'>
+            Put on your HoloLens and open the Lensflare app. Once it enters scanning mode, display the QR code on your devices page and say 'Scan' - once paired, the device is connected to the space you just made!
           </div>
         </div>
       </div>
 
 
-      <div style="width: 100%; height: 200px;">
-        <div style="float:left; text-align: left; width: 45%">
-          <div style="font-size: 75px; text-decoration: italic; padding-top:155px"><i>Create your first scene</i></div><br /><br />
-          <div style="font-size: 25px;"></div>
+      <div style='width: 100%; height: 200px;'>
+        <div style='float:left; text-align: left; width: 45%'>
+          <div style='font-size: 75px; text-decoration: italic; padding-top:155px'><i>Create your first scene</i></div><br /><br />
+          <div style='font-size: 25px;'></div>
         </div>
 
-        <div style="float:right; text-align:right; width: 55%; padding-top: 100px;">
-          <!-- <img width="100%" src="assets/Splash.jpg"> -->
-          <div style="font-size: 25px;">
-            After you've paired your device, say "Create Scene" to enter the scene setup mode; a mesh will appear around you and you can click points of interest to drop gems.
-            Once you're done dropping pins, say "Done" and the HoloLens will begin uploading the spatial mapping and locations of each gem. Hang tight - your HoloLens will automatically transition when it's done uploading!
+        <div style='float:right; text-align:right; width: 55%; padding-top: 100px;'>
+          <!-- <img width='100%' src='assets/Splash.jpg'> -->
+          <div style='font-size: 25px;'>
+            After you've paired your device, say 'Create Scene' to enter the scene setup mode; a mesh will appear around you and you can click points of interest to drop gems.
+            Once you're done dropping pins, say 'Done' and the HoloLens will begin uploading the spatial mapping and locations of each gem. Hang tight - your HoloLens will automatically transition when it's done uploading!
           </div>
         </div>
       </div>
 
-      <div style="width: 100%; height: 200px;">
+      <div style='width: 100%; height: 200px;'>
 
-        <div style="float:right; text-align: right; width: 60%; padding-top: 100px">
-          <div style="font-size: 75px; text-decoration: italic; padding-top: 110px"><i>Edit your space</i></div>
+        <div style='float:right; text-align: right; width: 60%; padding-top: 100px'>
+          <div style='font-size: 75px; text-decoration: italic; padding-top: 110px'><i>Edit your space</i></div>
         </div>
-        <div style="float:left; text-align:left; width: 40%; padding-top: 150px; padding-bottom: 125px">
-          <!-- <img width="100%" src="assets/Splash.jpg"> -->
-          <div style="font-size: 25px;">
+        <div style='float:left; text-align:left; width: 40%; padding-top: 150px; padding-bottom: 125px'>
+          <!-- <img width='100%' src='assets/Splash.jpg'> -->
+          <div style='font-size: 25px;'>
             Once the scene is uploaded, you can edit it directly on your Lensflare account page. Log in and select the space you just set up. Go through each item and
             add a title, text, and/or a media item as you wish. As you edit the items, they will be loaded live to your HoloLens so you can see how it looks!
           </div>
